# gov-daisy

./: .eslintrc.json  .gitignore  Makefile  README.md  _config.yml  generate_data.py  index.html  package.json  pyproject.toml  stylelint.config.cjs
_data/: year_1967-68.yml  year_1969-70.yml  year_1971-72.yml  year_1972-73.yml  year_1973-74.yml  year_1975-76.yml  year_1978-79.yml  year_1979-80.yml  year_1982-83.yml  year_1984-85.yml  year_1985-86.yml  year_1986-87.yml  year_1987-88.yml  year_1988-89.yml  year_1992-93.yml  year_1995-96.yml  year_1996-97.yml  year_1997-98.yml  year_1998-99.yml  year_2003-04.yml  year_2004-05.yml  year_2005-06.yml  year_2009-10.yml  year_2010-11.yml  year_2012-13.yml  year_2015-16.yml  year_2018-19.yml  year_2019-20.yml  year_2021-22.yml  year_2022-23.yml  year_2024-25.yml
_data/budget/: year_1964-65.yml  year_1965-66.yml  year_1966-67.yml  year_1967-68.yml  year_1968-69.yml  year_1969-70.yml  year_1970-71.yml  year_1971-72.yml  year_1972-73.yml  year_1973-74.yml  year_1974-75.yml  year_1975-76.yml  year_1976-77.yml  year_1977-78.yml  year_1978-79.yml  year_1979-80.yml  year_1980-81.yml  year_1981-82.yml  year_1982-83.yml  year_1983-84.yml  year_1984-85.yml  year_1985-86.yml  year_1986-87.yml  year_1987-88.yml  year_1988-89.yml  year_1989-90.yml  year_1990-91.yml  year_1991-92.yml  year_1992-93.yml  year_1993-94.yml  year_1994-95.yml  year_1995-96.yml  year_1996-97.yml  year_1997-98.yml  year_1998-99.yml  year_1999-00.yml  year_2000-01.yml  year_2001-02.yml  year_2002-03.yml  year_2003-04.yml  (+25 more)
_layouts/: default.html
(+149 files in other folders)
